# micro-gui

./: .gitignore  .gitmodules  .travis.yml  .yotta_ignore  CMakeLists.txt  CODE_OF_CONDUCT.md  Makefile  README.md  index.html  info.sh  main.c  module.json  params.json  test  ugui.cmake
.github/workflows/: codeql-buildscript.sh
example/: CMakeLists.txt
example/include/: circle_window.h  layer_window.h  line_window.h  menu_window.h  text_window.h
example/source/: circle_window.c  layer_window.c  line_window.c  main.c  menu_window.c  text_window.c
include/: bmp.h  graphics.h  layer.h  types.h  ugui.h  window.h
resources/: Thumbs.db
resources/fonts/: bmfont2c.cfg  bmfont2c.py  fontlibrary.c  fontlibrary.h  robotomono-regular-16.fnt  robotomono-regular-18.fnt  robotomono-regular-38.fnt  robotomono-regular-64.fnt  robotomono_regular_16.c  robotomono_regular_18.c
scripts/: build-font.py  build-iconic.py  font-template.c  font-template.h  icon-template.c  icon-template.h
source/: bmp.c  buffer.c  canvas_layer.c  font.c  graphics.c  layer.c  sprite.c  ugui.c  ugui_sdl.c  window.c
source/fonts/: robotomono_regular_16.c  robotomono_regular_18.c  robotomono_regular_24.c  robotomono_regular_32.c
source/icons/: icons_1x.c  icons_2x.c  icons_4x.c  icons_6x.c
source/widgets/: menu_widget.c  text_widget.c
test/: graphics_tests.cpp
ugui/: bmp.h  buffer.h  config.h  font.h  graphics.h  layer.h  sprite.h  types.h  ugui.h  ugui_sdl.h  window.h
ugui/fonts/: font_manager.h  robotomono_regular_16.h  robotomono_regular_18.h  robotomono_regular_24.h  robotomono_regular_32.h
ugui/icons/: icons_1x.h  icons_2x.h  icons_4x.h  icons_6x.h  icons_8x.h
ugui/widgets/: menu_widget.h  text_widget.h
